@@ -400,9 +400,9 @@ int main(int argc, char **argv) {
 #ifdef SSLSVD
 #else
     if (user) {
-      bufnum[fmt_ulong(bufnum, (unsigned long)ugid.uid)] =0;
+      bufnum[fmt_ulong(bufnum, ugid.uid)] =0;
       out(", uid "); out(bufnum);
-      bufnum[fmt_ulong(bufnum, (unsigned long)ugid.gid)] =0;
+      bufnum[fmt_ulong(bufnum, *ugid.gid)] =0;
       out(", gid "); out(bufnum);
     }
 #endif
